# TRACE-X

./: .env.example  .gitignore  LICENSE  README.md  cloudbuild.yaml  docker-compose.yml  screenshot_mc1.js  screenshot_mc2.js  screenshot_mc3.js  screenshot_tracex10.js  screenshot_tracex2.js  screenshot_tracex3.js  screenshot_tracex5.js  screenshot_tracex8.js  vercel.json
backend/: Dockerfile  pyproject.toml
backend/agents/: orchestrator.py
backend/agents/diagnosis/: agent.py  prompts.py  reconstructor.py
backend/agents/executive/: agent.py
backend/agents/observer/: agent.py  prompts.py
backend/agents/repair/: agent.py  prompts.py
backend/agents/repair/generators/: prompt_repair.py  tool_repair.py
backend/agents/validation/: agent.py
backend/api/: config.py  dependencies.py  main.py  middleware.py  websocket_manager.py
backend/api/routes/: __init__.py  agents.py  dashboard.py  demo.py  diagnoses.py  repairs.py  replay.py  simulator.py  traces.py  websocket.py
backend/api/schemas/: __init__.py  dashboard.py  diagnosis.py  repair.py  replay.py  trace.py
backend/mcp/: arize_mcp_client.py
backend/replay/: engine.py
backend/services/: bigquery_service.py  demo_seed.py  firestore_service.py  gemini_service.py  mock_firestore.py  mock_gemini.py  pubsub_service.py
backend/simulator/: twin_manager.py  what_if_engine.py
backend/tests/: conftest.py  test_diagnosis.py  test_ingestion.py  test_repair.py  test_replay.py
demo/: inject_failure.py  run_demo.sh  seed_data.py
docs/: ARCHITECTURE.md  REQUIREMENTS.md
frontend/: .env.local.example  Dockerfile  (+5 more)
(+63 files in other folders)
