# backend/pyproject.toml
[project]
name = "tracex-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "google-cloud-firestore>=2.19.0",
    "google-cloud-bigquery>=3.27.0",
    "google-cloud-pubsub>=2.27.0",
    "google-cloud-aiplatform>=1.74.0",
    "mcp>=1.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "websockets>=13.1",
    "asyncio-throttle>=1.0.2",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "numpy>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "services", "agents", "mcp", "replay", "simulator"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
]
